# osint-mcp

./: .env.example  .gitignore  README.md  osint.example.yaml  pyproject.toml
src/osint_mcp/: __main__.py  autodiscover.py  config.py  daemon.py  db.py  discord.py  events.py  mcp_server.py  summarize.py  targets.py
src/osint_mcp/watchers/: __init__.py  base.py  bbot.py  certstream.py  github_events.py  h1_hacktivity.py  js.py  rss.py  scope.py  security_page.py
